# sky_shop

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
src/: Category.py  LawnGrass.py  Product.py  Smartphone.py  __init__.py  iterators.py  utils.py  zeroproducterror.py
tests/: __init__.py  conftest.py  test_category.py  test_iterators.py  test_lawn_grass.py  test_print_mixin.py  test_product.py  test_smartphone.py  test_utils.py
